Fixed bug #32115 (dateTime encoding of timezone incorrect)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@181381 c90b9560-bf6c-de11-be94-00142212c4b1